# RadcorHC

./: #radcorrHC.cpp#  CMakeLists.txt  CMakeLists.txt~  EG4_proton_g1data_4np.csv  F2ALLM07.inp1  F2ALLM07.inp2  Get_InputFile.ipynb  Proton_Data.in  README.md  SmearingOutputs.ipynb  Yoni.out  f00.ful  f1.in  f1.old  f1.out  f11.ful  f12.ful  f21.ful  f22.ful  f90.ful  f99.ful  options.ini  options.ini~  plotF1.c  radcorrHC.cpp  radcorrHC.cpp~  radcorrHC.c~  report.txt
include/: #HCCreateSpectra.hh#  #HCSelectProcess.hh#  #HCSpacePhase.hh#  HCModel.hh  HCModel.hh~  HCPlot.hh  HCSelectProcess.hh  HCSelectProcess.hh~  HCSpacePhase.h1  HCSpacePhase.hh  HCSpacePhase.hh~  HCSpectra.hh  HCSpectra.hh~  HCVariables.hh  HCVariables.hh~
src/: #HCCreateSpectra.cc#  #HCModel.cc#  #HCSelectProcess.cc#  #HCSpacePhase.cc#  #HCSpectra.cc#  DSFs.f  F1F207.f  F1F209.f  HCModel.cc  HCPlot.cc  HCSelectProcess.cc  HCSelectProcess.cc~  HCSpacePhase.c1  HCSpacePhase.cc  HCSpacePhase.cc~  HCSpectra.cc  HCSpectra.cc~  HCVariables.cc  HCVariables.cc~  Yoni.f  f1f209_dr.f  f1f221redux.f  f2allm.f  newSFs.f  r1998.f  radcon.inc  rdcorr.f  sek_me.f  strucfunc.f
